# p2p-voice

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: audio.rs  main.rs
src/voice_app/: app_tracing.rs  app_type.rs  audio.rs  message.rs  mic_icon.rs  mod.rs  state.rs  style.rs  voice_app.rs  wrapper.rs
