[package]
name = "p2p-voice"
version = "0.1.0"
edition = "2024"

[dependencies]
cpal = "0.16.0"
iced = {"version" = "0.13.1", "features" = ["canvas"]}
iced_aw = {"version" = "0.12.2", default-features = false, "features" = ["tab_bar", "tabs"]}
nnnoiseless = "0.5.1"
ringbuf = "0.4.8"
rubato = "0.16.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
